--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>React Hello World</title>
+  <title>Tic Tac Toe</title>
 </head>
 <body>
   <div id="root"></div>
